--- a/props.html
+++ b/props.html
@@ -39,7 +39,7 @@ class CompB extends React.Component{
 const root = document.getElementById('root');
     // ReactDOM.render(<h3>O meu nome é : {nome}</h3>, root);  
     // ReactDOM.render(<CompA nome="José" sobrenome="Volpato" />, root);  
-    ReactDOM.render(<CompB nome="José" sobrenome="Volpato Junior" />, root);  
+    ReactDOM.render(<CompB nome="José Afranio" sobrenome="Volpato Junior" />, root);  
 
 
 </script>
