Commit para testar o gitLens...

--- a/index2.html
+++ b/index2.html
@@ -23,7 +23,7 @@ class CompA extends React.Component{
             <div>
             <h1>Teste Componente A </h1>
             </div>
-
+// tudo tem que estar dentro de uma tag única.
         )
       }
 }
