--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     //ReactDOM.render(<h3>O meu nome é : {nome}</h3>, root);  
     ReactDOM.render(<MeuComponente />, root);  
 
-
+//teste
 </script>
 
 </body>
